[package]
name = "egui_drag_value_expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27"
rhai = "1.18"

[dev-dependencies]
eframe = "0.27"

[[example]]
name = "basic"
path = "examples/basic.rs"
